--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidAssignments">
+        android:theme="@style/Theme.AndroidAssignments.NoActionBar">
+        <activity
+            android:name=".TestToolbar"
+            android:label="@string/title_activity_test_toolbar"
+            android:theme="@style/Theme.AndroidAssignments.NoActionBar"></activity>
         <activity android:name=".ChatWindow" />
         <activity android:name=".MainActivity" />
         <activity android:name=".ListItemsActivity" />
