--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
         android:name="android.hardware.camera"
         android:required="true" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:fullBackupContent="true"
@@ -14,10 +16,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAssignments.NoActionBar">
+        <activity android:name=".WeatherForecast"></activity>
         <activity
             android:name=".TestToolbar"
             android:label="@string/title_activity_test_toolbar"
-            android:theme="@style/Theme.AndroidAssignments.NoActionBar"></activity>
+            android:theme="@style/Theme.AndroidAssignments.NoActionBar" />
         <activity android:name=".ChatWindow" />
         <activity android:name=".MainActivity" />
         <activity android:name=".ListItemsActivity" />
